<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">
    <FrameLayout
        app:layout_constraintTop_toTopOf="parent"
        android:paddingHorizontal="32dp"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toTopOf="@id/contanier"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/tv_result"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_gravity="end|bottom"
            android:text="@string/zero"
            android:textSize="80dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </FrameLayout>


    <LinearLayout
        android:id="@+id/contanier"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:weightSum="4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                style="@style/Button.Gray"
                android:id="@+id/btn_clear"
                android:onClick="onClickNumber"
                android:text="@string/AC"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Button.Gray"
                android:id="@+id/btn_pl_mi"
                android:onClick="onClickOperation"
                android:text="@string/plus_minus"
                android:layout_marginHorizontal="16dp"/>
            <com.google.android.material.button.MaterialButton
                style="@style/Button.Gray"
                android:id="@+id/btn_percent"
                android:onClick="onClickOperation"
                android:text="@string/percent"
                android:layout_marginEnd="16dp"/>
            <com.google.android.material.button.MaterialButton
                style="@style/Button.Orange"
                android:id="@+id/btn_division"
                android:onClick="onClickOperation"
                android:text="/"/>
        </LinearLayout>

        <LinearLayout
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:weightSum="4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                style="@style/Button.Gray.Dark"
                android:id="@+id/btn_seven"
                android:onClick="onClickNumber"
                android:text="@string/seven"/>
            <com.google.android.material.button.MaterialButton
                style="@style/Button.Gray.Dark"
                android:id="@+id/btn_eight"
                android:onClick="onClickNumber"
                android:text="@string/eight"
                android:layout_marginHorizontal="16dp"/>
            <com.google.android.material.button.MaterialButton
                style="@style/Button.Gray.Dark"
                android:id="@+id/btn_nine"
                android:onClick="onClickNumber"
                android:text="@string/nine"
                android:layout_marginEnd="16dp"/>
            <com.google.android.material.button.MaterialButton
                style="@style/Button.Orange"
                android:id="@+id/btn_multiplication"
                android:onClick="onClickOperation"
                android:text="x"/>
        </LinearLayout>

        <LinearLayout
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:weightSum="4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                style="@style/Button.Gray.Dark"
                android:id="@+id/btn_four"
                android:onClick="onClickNumber"
                android:text="@string/four"/>
            <com.google.android.material.button.MaterialButton
                style="@style/Button.Gray.Dark"
                android:id="@+id/btn_five"
                android:onClick="onClickNumber"
                android:text="5"
                android:layout_marginHorizontal="16dp"/>
            <com.google.android.material.button.MaterialButton
                style="@style/Button.Gray.Dark"
                android:id="@+id/btn_six"
                android:onClick="onClickNumber"
                android:text="@string/six"
                android:layout_marginEnd="16dp"/>
            <com.google.android.material.button.MaterialButton
                style="@style/Button.Orange"
                android:id="@+id/btn_minus"
                android:onClick="onClickOperation"
                android:text="@string/minus"/>
        </LinearLayout>

        <LinearLayout
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:weightSum="4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                style="@style/Button.Gray.Dark"
                android:id="@+id/btn_one"
                android:onClick="onClickNumber"
                android:text="@string/one"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Button.Gray.Dark"
                android:id="@+id/btn_two"
                android:onClick="onClickNumber"
                android:text="@string/two"
                android:layout_marginHorizontal="16dp"/>
            <com.google.android.material.button.MaterialButton
                style="@style/Button.Gray.Dark"
                android:id="@+id/btn_three"
                android:onClick="onClickNumber"
                android:text="@string/three"
                android:layout_marginEnd="16dp"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Button.Orange"
                android:id="@+id/btn_plus"
                android:onClick="onClickOperation"
                android:text="@string/plus"/>
        </LinearLayout>

        <LinearLayout
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:weightSum="4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                style="@style/Button.Gray.Dark"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:textAlignment="textStart"
                android:paddingStart="32dp"
                android:paddingEnd="0dp"
                android:id="@+id/btn_zero"
                android:onClick="onClickNumber"
                android:text="@string/zero"/>
            <com.google.android.material.button.MaterialButton
                style="@style/Button.Gray.Dark"
                android:layout_weight="0"
                android:layout_marginHorizontal="16dp"
                android:id="@+id/btn_dot"
                android:onClick="onClickNumber"
                android:text="." />
            <com.google.android.material.button.MaterialButton
                style="@style/Button.Orange"
                android:id="@+id/btn_equal"
                android:onClick="onClickOperation"
                android:text="="/>

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>